# sentiment-analysis

./: .pre-commit-config.yaml  README.md  main.py  pyproject.toml
src/: plotgraphs.py  sentanalysis.py
tests/: test_sentiment_analysis.py
