[tool.poetry]
name = "sentiment-analysis"
version = "0.1.0"
description = ""
authors = ["yugant10-commits <yugantghimire12345@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
streamlit = "^1.9.2"
transformers = "^4.19.2"
numpy = "^1.22.4"
nltk = "^3.7"
spacytextblob = "^4.0.0"
spacy = "^3.3.0"
plotly = "^5.8.0"
matplotlib = "^3.5.2"
pandas = "^1.4.2"
tensorflow = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
